[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subtitler"
version = "0.1.0"
description = "Simple and elegant Python library for extracting video subtitles and transcripts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "youtube-transcript-api>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
]
